--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,5 @@
-:root {
-  --font-size-base: 16px;
-}
+@import './styles/variables';
+
 
 * {
   box-sizing: border-box;
@@ -8,17 +7,18 @@
 }
 
 html {
-  font-size: var(--font-size-base);
+  font-size: $font-size-base;
 }
 
 body {
   min-width: 320px;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
   font-size: 1rem;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  line-height: 1.5;
+  font-family: $font-family-base;
+  color: $color-text-base;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
